--- a/index.html
+++ b/index.html
@@ -3,8 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- link css -->
     <link rel="stylesheet" href="asset/css/style.css" />
+
+    <!-- link icon -->
     <link rel="icon" href="asset/img/logo.jpg" />
+
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- fonnt awsome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+
     <title>Maid Caffe Bali || Kelompok 1</title>
   </head>
   <body>
@@ -22,10 +47,18 @@
             <img src="asset/img/logo1.png" alt="" />
           </div>
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#talent">Talent</a></li>
-            <li><a href="#event">Event</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li>
+              <a href="#home"><i class="fa-solid fa-house"></i>Home</a>
+            </li>
+            <li>
+              <a href="#members"><i class="fa-solid fa-users"></i>Member</a>
+            </li>
+            <li>
+              <a href="game.html"><i class="fa-solid fa-gamepad"></i>Games</a>
+            </li>
+            <li>
+              <a href="#contact"><i class="fa-solid fa-phone"></i>Contact</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -33,60 +66,72 @@
     <!-- end header -->
 
     <!-- member -->
-    <div class="members">
+    <div class="members" id="members">
       <div class="container">
         <div class="title">Maid</div>
         <div class="member">
           <section class="profile">
-            <div class="imgwrap">
-              <img src="asset/img/azuki.jpg" alt="" />
-            </div>
-            <div class="card">
-              <h3>Azuki (アズキ)</h3>
-            </div>
+            <a href="#1">
+              <div class="imgwrap">
+                <img src="asset/img/azuki.jpg" alt="" />
+              </div>
+              <div class="card">
+                <h3>Azuki (アズキ)</h3>
+              </div>
+            </a>
           </section>
           <section class="profile">
-            <div class="imgwrap">
-              <img src="asset/img/chocola.jpg" alt="" />
-            </div>
-            <div class="card">
-              <h3>Chocola (チョコラ)</h3>
-            </div>
+            <a href="#2">
+              <div class="imgwrap">
+                <img src="asset/img/chocola.jpg" alt="" />
+              </div>
+              <div class="card">
+                <h3>Chocola (チョコラ)</h3>
+              </div>
+            </a>
           </section>
           <section class="profile">
-            <div class="imgwrap">
-              <img src="asset/img/kokonat.jpg" alt="" />
-            </div>
-            <div class="card">
-              <h3>kokonat (ココナッツ)</h3>
-            </div>
+            <a href="#3">
+              <div class="imgwrap">
+                <img src="asset/img/kokonat.jpg" alt="" />
+              </div>
+              <div class="card">
+                <h3>kokonat (ココナッツ)</h3>
+              </div>
+            </a>
           </section>
         </div>
 
         <div class="member">
           <section class="profile">
-            <div class="imgwrap">
-              <img src="asset/img/maple.jpg" alt="" />
-            </div>
-            <div class="card">
-              <h3>Maple (メイプル<)</h3>
-            </div>
+            <a href="#4">
+              <div class="imgwrap">
+                <img src="asset/img/maple.jpg" alt="" />
+              </div>
+              <div class="card">
+                <h3>Maple (メイプル<)</h3>
+              </div>
+            </a>
           </section>
           <section class="profile">
-            <div class="imgwrap">
-              <img src="asset/img/shigure.jpg" alt="" />
-            </div>
-            <div class="card">
-              <h3>Shigure (時雨)</h3>
-            </div>
+            <a href="#5">
+              <div class="imgwrap">
+                <img src="asset/img/shigure.jpg" alt="" />
+              </div>
+              <div class="card">
+                <h3>Shigure (時雨)</h3>
+              </div>
+            </a>
           </section>
           <section class="profile">
-            <div class="imgwrap">
-              <img src="asset/img/vanilla.jpg" alt="" />
-            </div>
-            <div class="card">
-              <h3>Vanilla (バニラ)</h3>
-            </div>
+            <a href="#6">
+              <div class="imgwrap">
+                <img src="asset/img/vanilla.jpg" alt="" />
+              </div>
+              <div class="card">
+                <h3>Vanilla (バニラ)</h3>
+              </div>
+            </a>
           </section>
         </div>
       </div>
@@ -94,14 +139,14 @@
     <!-- end member -->
 
     <!-- footer -->
-    <div class="footer">
+    <div class="footer" id="contact">
       <footer>
         <div class="container">
           <div class="logo">
             <div class="logo-img">
               <img src="asset/img/logo1.png" alt="" />
               <div class="logo-title">
-                <span class="typing1">Maid caffe Bali</span>
+                <span class="typing1"></span>
               </div>
             </div>
           </div>
@@ -121,6 +166,124 @@
       </footer>
     </div>
     <!-- end footer -->
+
+    <!-- pop up -->
+    <div class="popup" id="1">
+      <div class="popup__content">
+        <a href="#members" class="popup__close">&times;</a>
+        <div class="container">
+          <div class="img">
+            <img src="asset/img/azuki.jpg" alt="" />
+          </div>
+          <div class="des">
+            <h1>Azuki</h1>
+            <p>
+              <i>"Memberi kebahagiaan lewat gummy smile-ku. Halo aku Azuki"</i>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="popup" id="2">
+      <div class="popup__content">
+        <a href="#members" class="popup__close">&times;</a>
+        <div class="container">
+          <div class="img">
+            <img src="asset/img/chocola.jpg" alt="" />
+          </div>
+          <div class="des">
+            <h1>Chocola</h1>
+            <p>
+              <i
+                >"Aku terlahir sebagai sosok tenang dan misterius, tetapi selalu
+                fokus pada tujuan. Hai aku Chocola"</i
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="popup" id="3">
+      <div class="popup__content">
+        <a href="#members" class="popup__close">&times;</a>
+        <div class="container">
+          <div class="img">
+            <img src="asset/img/kokonat.jpg" alt="" />
+          </div>
+          <div class="des">
+            <h1>Kokonat</h1>
+            <p>
+              <i
+                >"Aku datang bagaikan embun pagi yang menyejukkan suasana hari.
+                Hai aku Kokonat"</i
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="popup" id="4">
+      <div class="popup__content">
+        <a href="#members" class="popup__close">&times;</a>
+        <div class="container">
+          <div class="img">
+            <img src="asset/img/maple.jpg" alt="" />
+          </div>
+          <div class="des">
+            <h1>Maple</h1>
+            <p>
+              <i
+                >"Bagaikan kucing yang kalem, tapi selalu memikat hati kamu. Hai
+                aku Maple"</i
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="popup" id="5">
+      <div class="popup__content">
+        <a href="#members" class="popup__close">&times;</a>
+        <div class="container">
+          <div class="img">
+            <img src="asset/img/shigure.jpg" alt="" />
+          </div>
+          <div class="des">
+            <h1>Shigure</h1>
+            <p>
+              <i
+                >"Diam bukan berarti tidak memperhatikan mu. Hai aku Shigure"</i
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="popup" id="6">
+      <div class="popup__content">
+        <a href="#members" class="popup__close">&times;</a>
+        <div class="container">
+          <div class="img">
+            <img src="asset/img/vanilla.jpg" alt="" />
+          </div>
+          <div class="des">
+            <h1>Vanilla</h1>
+            <p>
+              <i
+                >"Gadis koleris yang suka berimajinasi, terangi harimu dengan
+                senyum karamel ku. Hai aku Vanilla"</i
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end pop up -->
 
     <!-- script -->
     <script
