--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="asset/css/style.css" />
 
     <!-- link icon -->
-    <link rel="icon" href="asset/img/logo.jpg" />
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,6 +28,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+
+    <!-- icon -->
+    <link rel="icon" href="asset/img/logo.jpg" />
 
     <title>Maid Caffe Bali || Kelompok 1</title>
   </head>
